2009-04-24  Andy Buckley  <andy@insectnation.org>

	* Note that ZEUS_2001_S4815815 uses the wrong jet definition: it
	should be a cone but curently uses kT.

	* Fixing CDF_2005_S6217184 to use correct (midpoint, R=0.7) jet
	definition. That this was using a kT definition with R=1.0 was
	only made obvious when the default FastJets constructor was
	removed.

	* Removing FastJets default constructor: since there are now
	several good (IRC safe) jet definitions available, there is no
	obvious safe default and analyses should have to specify which
	they use.

	* Moving FastJets constructors into implementation file to reduce
	recompilation dependencies, and adding new plugins.

	* Ensuring that axis labels actually get written to the output
	data file.

2009-04-22  Andy Buckley  <andy@insectnation.org>

	* Adding explicit FastJet CDF jet alg overlap_threshold
	constructor param values, since the default value from 2.3.x is
	now removed in version 2.4.0.

	* Removing use of HepMC ThreeVector::mag method (in one place
	only) since this has been removed in version 2.5.0b.

	* Fix to hepmc.i (included by rivet.i) to ignore new HepMC 2.5.0b
	GenEvent stream operator.

2009-04-21  Andy Buckley  <andy@insectnation.org>

	* Dependency on FastJet now requires version 2.4.0 or later. Jade
	algorithm is now native.

	* Moving all analysis constructors and Projection headers from the
	analysis header files into their .cc implementation files, cutting
	header dependencies.

	* Removing AIDA headers: now using LWH headers only, with
	enhancement to use axis labels. This facility is now used by the
	histo booking routines, and calling the booking function versions
	which don't specify axis labels will result in a runtime warning.

2009-04-07  Andy Buckley  <andy@insectnation.org>

	* Adding $(DESTDIR) prefix to call to Python module "setup.py
	install"

	* Moving HepMC SWIG mappings into Python Rivet module for now:
	seems to work-around the SL type-mapping bug.
